@@ -4,6 +4,7 @@ import javafx.beans.value.ChangeListener;
 import javafx.beans.value.ObservableValue;
 import javafx.fxml.FXML;
 import javafx.scene.canvas.Canvas;
+import javafx.scene.canvas.GraphicsContext;
 import javafx.scene.control.Button;
 import javafx.scene.control.Label;
 import javafx.scene.control.Separator;
@@ -15,6 +16,17 @@ import javafx.scene.layout.VBox;
 
 import java.util.ArrayList;
 
+/**
+ * DrawController class controls the functionality of the controllers.
+ * Methods:
+ *     void clearCanvasButtonPressed(ActionEvent event)
+ *     void quadGraphButtonPressed(ActionEvent event)
+ *     void graphButtonPressed(ActionEvent event)
+ *     void initialize()
+ *     public ArrayList<double[]> functionCoordinates(double m, double b)
+ *     public ArrayList<double[]> quadraticCoordinates(double a, double b, double c)
+ *     public void plot(ArrayList<double[]>graphPoints)
+ */
 public class DrawController {
 
     @FXML
@@ -64,10 +76,23 @@ public class DrawController {
 
     @FXML
     private VBox vboxContainer;
-
+    /**
+     * Clears and redraws the canvas. This method resets the background to black,
+     * recreates the graphics context, and redraws the X and Y axes with the
+     * origin positioned at the center of the canvas.
+     * The JavaFX canvas coordinate system begins at the top-left corner (0,0),
+     * with increasing x-values to the right and increasing y-values downward.
+     *
+     * @param event the ActionEvent triggered by pressing the "Clear Canvas" button
+     * Methods:
+     *     graphCanvas.getGraphicsContext2D()
+     *     gc.fillRect(0, 0, double width, double height)
+     *     gc.strokeLine(startX, startY, endX, endY)
+     *     gc.setStroke(javafx.scene.paint.Color.WHITE)
+     */
     @FXML
     void clearCanvasButtonPressed(ActionEvent event){
-        var gc = graphCanvas.getGraphicsContext2D();
+        GraphicsContext gc = graphCanvas.getGraphicsContext2D();
 
         double width = graphCanvas.getWidth();
         double height = graphCanvas.getHeight();
@@ -84,6 +109,14 @@ public class DrawController {
         gc.strokeLine(centerX, 0, centerX, height); // Y-axis
     }
 
+    /**
+     * Handles the graphing of a quadratic function. Inputs are taken from the aTextField(x^2-coefficient),
+     * quadbTextField(x-coefficient), and cTextField(y-intercept)
+     * @param event the ActionEvent triggered by pressing the "Graph Quadratic" button
+     * Methods:
+     *     quadraticCoordinates(double a, double b, double c)
+     *     plot(ArrayList<double[]> points)
+     */
     @FXML
     void quadGraphButtonPressed(ActionEvent event) {
         double a = Double.parseDouble(aTextField.getText());
@@ -91,9 +124,16 @@ public class DrawController {
         double c = Double.parseDouble(cTextField.getText());
         ArrayList<double[]> points = quadraticCoordinates(a, b,c);
         plot(points);
-
     }
 
+    /**
+     * Handles the action of graphing a linear function. Inputs are taken from the mTextField(x-coefficient) and
+     * bTextField(y-intercept).
+     * @param event the ActionEvent triggered by pressing the "Graph Line" button
+     * Methods:
+     *     functionCoordinates(double m, double b)
+     *     plot(ArrayList<double[]> points)
+     */
     @FXML
     private void graphButtonPressed(ActionEvent event){
         double m = Double.parseDouble(mTextField.getText());
@@ -101,9 +141,25 @@ public class DrawController {
         ArrayList<double[]> points = functionCoordinates(m,b);
         plot(points);
     }
+
+    /**
+     * Initializes the canvas when the application loads. This method prepares
+     * the drawing surface by filling the background and drawing the X and Y axes
+     * centered on the canvas.
+     * The canvas uses getGraphicsContext2D() to initialize a Graphics Context Object
+     * The Graphics Context Object has then methods used to draw.
+     * Methods:
+     *      graphCanvas.getGraphicsContext2D()
+     *      gc.fillRect(0, 0, double width, double height)
+     *      gc.strokeLine(double startX, double startY,double endX,double endY)
+     *      gc.setStroke(javafx.scene.paint.Color.WHITE)
+     *      gc.setLineWidth(double width)
+     */
+
     // initialize canvas
     @FXML
     public void initialize() {
+        GraphicsContext gc = graphCanvas.getGraphicsContext2D();
         graphCanvas.widthProperty().bind(hboxContainer.widthProperty());
         graphCanvas.heightProperty().bind(hboxContainer.heightProperty());
         ChangeListener<Number> sizeListener = (ObservableValue<? extends Number> obs, Number oldVal, Number newVal)
@@ -116,21 +172,28 @@ public class DrawController {
     private void drawGraph() {
         double width = graphCanvas.getWidth();
         double height = graphCanvas.getHeight();
+        GraphicsContext gc = graphCanvas.getGraphicsContext2D();
+        double centerY = height / 2;
+        double centerX = width / 2;
 
-        var gc = graphCanvas.getGraphicsContext2D();
-
+        // Draw background
         gc.setFill(javafx.scene.paint.Color.BLACK);
         gc.fillRect(0, 0, width, height);
 
-        double centerX = width / 2.0;
-        double centerY = height / 2.0;
-
+        // Draw axes
         gc.setStroke(javafx.scene.paint.Color.WHITE);
-        gc.strokeLine(0, centerY, width, centerY);   // X-axis
-        gc.strokeLine(centerX, 0, centerX, height);  // Y-axis
+        gc.strokeLine(0, centerY, width, centerY); // X-axis
+        gc.strokeLine(centerX, 0, centerX, height); // Y-axis
     }
 
-    // calculate x.y coordinates (x values from -10 to 10, so 10 points total)
+    /**
+     * Generates a list of (x, y) coordinate pairs for a linear function.
+     *
+     * @param m the slope of the linear function
+     * @param b the y-intercept of the linear function
+     * @return an arrayList containing [x,y] coordinate pairs.
+     */
+    // calculate x.y coordinates
     public ArrayList<double[]> functionCoordinates(double m, double b){
         // ArrayList of x,y coordinates( arraylist of arrays)
         ArrayList<double[]> graphPoints = new ArrayList<>();
@@ -140,6 +203,14 @@ public class DrawController {
         }
     return graphPoints;
     }
+
+    /**
+     * Generates a list of (x, y) coordinate pairs for a quadratic function.
+     * @param a the coefficient of the x^2 term
+     * @param b the coefficient of the x term
+     * @param c the constant term of the quadratic function
+     * @return an arrayList containing [x,y] coordinates pairs
+     */
     public ArrayList<double[]> quadraticCoordinates(double a, double b, double c){
         ArrayList<double[]> graphPoints = new ArrayList<>();
         for (double x = -100; x < 101; x+=0.1) {
@@ -150,22 +221,34 @@ public class DrawController {
 
         }
 
+    /**
+     * Plots a list of (x, y) coordinate pairs onto the canvas by drawing
+     * connected line segments between each consecutive point.
+     * @param graphPoints an ArrayList of double[] pairs representing x and y
+     *                    coordinates to be drawn on the canvas
+     * Methods:
+     *      graphCanvas.getGraphicsContext2D()
+     *      gc.fillRect(0, 0, double width, double height)
+     *      gc.strokeLine(double startX, double startY, double endX, double endY)
+     *      gc.setStroke(javafx.scene.paint.Color.WHITE)
+     *      gc.setLineWidth(double width)
+     */
     // plot the function
     public void plot(ArrayList<double[]>graphPoints){
-        var gc = graphCanvas.getGraphicsContext2D();
+        GraphicsContext gc = graphCanvas.getGraphicsContext2D();
         // center of canvas
         double width = graphCanvas.getWidth();
         double height = graphCanvas.getHeight();
-        double centerX = width / 2.0;
-        double centerY = height / 2.0;
+        double centerX = width / 2;
+        double centerY = height / 2;
         // pixels per graphing unit, adjusts the zoom of graphCanvas
-        double scale = 50;
+        double scale = 5;
         gc.setStroke(javafx.scene.paint.Color.BLUE);
         gc.setLineWidth(2);
         // starting point
         double[] startingPoint = {
-                centerX + graphPoints.getFirst()[0] * scale,
-                centerY - graphPoints.getFirst()[0] * scale
+                centerX + graphPoints.get(0)[0] * scale,
+                centerY - graphPoints.get(0)[1] * scale
         };
 
         for (double [] point : graphPoints){
